# agnt

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/agnt-app/: Cargo.toml
crates/agnt-app/src/: lib.rs
crates/agnt-auth/: Cargo.toml
crates/agnt-auth/src/: error.rs  lib.rs  manager.rs  oauth.rs  store.rs
crates/agnt-cli/: Cargo.toml
crates/agnt-cli/src/: app.rs  gui.rs  main.rs  session.rs  ui.rs
crates/agnt-cli/src/gui/: session_dialog.rs  typeahead.rs
crates/agnt-cli/src/tui/: app.rs  mod.rs  session_dialog.rs  typeahead.rs  ui.rs
crates/agnt-cli/src/typeahead/: commands.rs  mentions.rs  mod.rs  provider.rs  state.rs
crates/agnt-core/: Cargo.toml
crates/agnt-core/resources/: SYSTEM_PROMPT.md
crates/agnt-core/resources/tools/: bash.md  edit.md  read.md  skill.md
crates/agnt-core/src/: agent.rs  event.rs  lib.rs  tool.rs
crates/agnt-core/src/tools/: bash.rs  edit.rs  hashline.rs  mod.rs  read.rs  skill.rs  write.rs
crates/agnt-db/: Cargo.toml
crates/agnt-db/migrations/: 0001_init.sql  0002_provider_credentials.sql
crates/agnt-db/src/: database.rs  error.rs  lib.rs  migration.rs  models.rs  provider_credentials.rs  sessions.rs  store.rs
crates/agnt-llm/: Cargo.toml
crates/agnt-llm-codex/: Cargo.toml
crates/agnt-llm-codex/src/: lib.rs
crates/agnt-llm-openai/: Cargo.toml
crates/agnt-llm-openai/src/: convert.rs  lib.rs  register.rs  stream.rs  types.rs
crates/agnt-llm-registry/: Cargo.toml
crates/agnt-llm-registry/src/: auth.rs  error.rs  factory.rs  lib.rs  model_source.rs  provider.rs  registry.rs  spec.rs
crates/agnt-llm/src/: describe.rs  error.rs  lib.rs  model.rs  provider.rs  request.rs  response.rs  stream.rs
