[package]
name = "agnt-cli"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Terminal-first agent app with TUI and GUI modes."

[[bin]]
name = "agnt"
path = "src/main.rs"

[dependencies]
agnt-app = { version = "0.1.0", path = "../agnt-app" }
agnt-auth = { version = "0.1.0", path = "../agnt-auth" }
agnt-core = { version = "0.1.0", path = "../agnt-core" }
agnt-db = { version = "0.1.0", path = "../agnt-db" }
agnt-llm = { path = "../agnt-llm" }
agnt-llm-codex = { version = "0.1.0", path = "../agnt-llm-codex" }
agnt-llm-openai = { path = "../agnt-llm-openai" }
agnt-llm-registry = { path = "../agnt-llm-registry" }
axum = "0.8.8"
clap = { version = "4.5.57", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dotenvy = "0.15.7"
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", branch = "main" }
ratatui = { version = "0.30", features = ["crossterm"] }
rpassword = "7.4.0"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
url = "2.5.8"
webbrowser = "1.1.0"
