[package]
name = "agnt-core"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
agnt-llm = { path = "../agnt-llm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "process"] }
tokio-stream = "0.1"
futures = "0.3"
serde_yaml = "0.9.34"
