[package]
name = "agnt-llm-codex"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
agnt-llm-openai = { version = "0.1.0", path = "../agnt-llm-openai" }
agnt-llm-registry = { version = "0.1.0", path = "../agnt-llm-registry" }
