[package]
name = "agnt-llm-openai"
version = "0.1.0"
edition = "2024"

[dependencies]
agnt-llm = { path = "../agnt-llm" }
async-stream = "0.3.6"
async-trait = "0.1.89"
eventsource-stream = "0.2.3"
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
